--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@maooricio/react-native-expo-bitcoinjs-lib",
-  "version": "2.4.4",
-  "description": "Client-side Bitcoin JavaScript library for React Native using Expo Random",
+  "name": "react-native-expo49-bitcoinjs-lib",
+  "version": "1.0.0",
+  "description": "Client-side Bitcoin JavaScript library for React Native using Expo Crypto",
   "main": "./src/index.js",
   "engines": {
     "node": ">=4.0.0"
@@ -11,52 +11,22 @@
     "react-native",
     "reactnative",
     "library",
-    "wallet"
-  ],
-  "contributors": [
-    {
-      "name": "Daniel Cousens",
-      "email": "bitcoin@dcousens.com",
-      "url": "http://dcousens.com"
-    },
-    {
-      "name": "Kyle Drake",
-      "email": "kyle@kyledrake.net",
-      "url": "http://kyledrake.net/"
-    },
-    {
-      "name": "Wei Lu",
-      "email": "luwei.here@gmail.com",
-      "url": "http://weilu.github.io/"
-    },
-    {
-      "name": "Stefan Thomas",
-      "email": "justmoon@members.fsf.org",
-      "url": "http://www.justmoon.net"
-    },
-    {
-      "name": "Alberto Dallaporta",
-      "email": "alberto@novalab.io",
-      "url": "https://novalab.io"
-    },
-    {
-      "name": "Richard Silver",
-      "email": "richard@silver.sh",
-      "url": "https://github.com/themotu"
-    }
+    "wallet",
+    "expo"
   ],
   "scripts": {
     "coverage-report": "nyc report --reporter=lcov",
     "coverage-html": "nyc report --reporter=html",
     "coverage": "nyc --check-coverage --branches 90 --functions 90 mocha",
     "integration": "mocha test/integration/",
+    "lint": "eslint .",
     "standard": "standard",
-    "test": "npm run standard && npm run coverage",
+    "test": "npm run lint && npm run coverage",
     "unit": "mocha"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/maooricio/react-native-expo-bitcoinjs-lib"
+    "url": "https://github.com/timknapp12/react-native-expo49-bitcoinjs-lib"
   },
   "files": [
     "src"
@@ -67,21 +37,25 @@
     "bitcoin-ops": "^1.3.0",
     "bs58check": "^2.0.0",
     "ecurve": "^1.0.0",
-    "expo-random": "~13.0.0",
+    "expo-crypto": "^12.8.0",
     "merkle-lib": "^2.0.10",
     "pushdata-bitcoin": "^1.0.1",
-    "@maooricio/react-native-expo-crypto": "^2.1.5",
     "typedarray-to-buffer": "^4.0.0",
     "typeforce": "^1.8.7",
     "varuint-bitcoin": "^1.0.4",
     "wif": "^2.0.1"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.23.10",
+    "@babel/preset-react": "^7.23.3",
     "async": "^2.0.1",
     "bip39": "^2.3.0",
     "bs58": "^4.0.0",
     "cb-http-client": "^0.2.0",
     "coinselect": "^3.1.1",
+    "eslint": "^8.56.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "minimaldata": "^1.0.2",
     "mocha": "^3.1.0",
     "nyc": "^10.2.0",
