--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-expo49-bitcoinjs-lib",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "Client-side Bitcoin JavaScript library for React Native using Expo Crypto",
   "main": "./src/index.js",
   "engines": {
@@ -36,6 +36,7 @@
     "bip66": "^1.1.0",
     "bitcoin-ops": "^1.3.0",
     "bs58check": "^2.0.0",
+    "crypto-es": "^2.1.0",
     "ecurve": "^1.0.0",
     "expo-crypto": "^12.8.0",
     "merkle-lib": "^2.0.10",
